tests/pos/namespace-no-import/main.jo
namespace app

def main =
  println (test.double 10)    // error // error
